Fix scrollbar visible when no extension is selected

--- a/src/main/frontend/src/code-quarkus/pickers/extensions-picker.scss
+++ b/src/main/frontend/src/code-quarkus/pickers/extensions-picker.scss
@@ -220,7 +220,7 @@
     padding-top: 20px;
     position: sticky;
     top: 220px;
-    height: 800px;
+    height: 600px;
     display: flex;
     flex-direction: column;
 
@@ -269,7 +269,7 @@
 
     .extension-list-wrapper {
       height: calc(100% - 25px);
-      overflow-y: scroll;
+      overflow-y: auto;
     }
   }
 
